<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0F1D6E"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_margin="25dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/halal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="right"
                    android:text="@string/halal"
                    android:textColor="#0A1555"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/image_detail"
                    android:layout_width="270dp"
                    android:layout_height="270dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/nama_jajanan"
                    android:textColor="#0A1555"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/desc_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/amita"
                android:justificationMode="inter_word"
                android:text="@string/deskripsi_jajan"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/short_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/amita"
                android:text="@string/menu"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
